Test/git-issues/git-issue-3430/git-issue-3430d1.dfy.expect
git-issue-3430d1.dfy(6,9): Error: duplicate name for module declaration: B
1 resolution/type errors detected in git-issue-3430d1.dfy
