Test/git-issues/git-issue-3430/git-issue-3430d1.dfy
// RUN: %exits-with 2 %resolve "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

module A {
  module B
  module B
}

// Should report duplicate
